--- a/app/views/studies/vote.html.erb
+++ b/app/views/studies/vote.html.erb
@@ -1,2 +1,27 @@
 <%= render 'header', :study => @study %>
-<p>Todo: voting interface</p>
+<!-- <p>Todo: voting interface</p> -->
+
+<!-- select 2 random locations from a random region from a region set within the study -->
+<% @regions = @study.region_set.regions.find(:all, :limit => 1, :order => "RANDOM()") %>
+<% @locations = @regions[0].locations.find(:all, :limit => 2, :order => "RANDOM()") %>
+  <table>
+  <tr>
+  <% @locations.each do |location| %>
+    <td class="vote-image">
+      <img src="http://maps.googleapis.com/maps/api/streetview?size=150x80&location=<%= location.latitude %>,%20<%= location.longitude %>&sensor=false" />
+    </td>
+  <% end %>
+  </tr>
+  <tr>
+  <td class="vote-button">
+    <%= button_to "1", new_comparison_path(:chosen_location_id => @locations[0].id, :rejected_location_id => @locations[1].id), :method => :post %>
+  </td>
+   <td class="vote-button">
+    <%= button_to "2", new_comparison_path(:chosen_location_id => @locations[1].id, :rejected_location_id => @locations[0].id), :method => :post %>
+  </td>
+  </tr>
+</table>
+
+
+      
+ 
