--- a/config/deploy/application.yml.erb
+++ b/config/deploy/application.yml.erb
@@ -1,4 +1,4 @@
-# application.yml template
+# application.yml template<% Capistrano::CLI.ui.say("Creating application.yml from template...") %>
 TWITTER_CONSUMER_KEY: "<%= Capistrano::CLI.ui.ask("Enter the Twitter consumer key: ") %>"
 TWITTER_CONSUMER_SECRET: "<%= Capistrano::CLI.password_prompt("Enter the Twitter consumer secret: ") %>"
 
